--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>My Blog</h1>
-    </header>/
+    </header>
     <main>
         <article class="blog-post">
             <h2>Unveiling the Magic of Supervised Learning Algorithms</h2>
